# learn-wgpu-dev

./: .gitignore  learn-wgpu-zh.code-workspace
code/beginner/tutorial1-window/src/: main.rs
code/beginner/tutorial2-surface/src/: challenge.rs  main.rs
code/beginner/tutorial3-pipeline/src/: challenge.rs  main.rs
code/beginner/tutorial4-buffer/src/: main.rs
code/beginner/tutorial5-textures/src/: Code Citations.md  challenge.rs  main.rs  shader.wgsl  texture.rs
code/beginner/tutorial6-uniforms/: Cargo.toml
code/beginner/tutorial6-uniforms/src/: challenge.rs  main.rs  shader.wgsl
code/beginner/tutorial7-instancing/src/: challenge.rs  main.rs  shader.wgsl
code/beginner/tutorial8-depth/src/: challenge.rs  main.rs  texture.rs
code/beginner/tutorial9-models/src/: main.rs  model.rs  resources.rs  texture.rs
code/utils/src/: framework.rs  lib.rs
