[package]
name = "tutorial6-uniforms"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
glam.workspace = true
instant.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
wgpu.workspace = true
app-surface.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
utils.workspace = true
# 需要避免在 wasm 中添加 pollster 依赖，否则会导致 wasm 加载时报错：
# An error occurred loading "XXX": TypeError: Failed to resolve module specifier "env". Relative references must start with either "/", "./", or "../".
pollster.workspace = true

[dependencies.image]
workspace = true
features = ["png", "jpeg"]

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true

[[bin]]
name = "tutorial6-challenge"
path = "src/challenge.rs"
